# kayoscrypto-full

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.txt
docs/: BENCHMARK_KAYOSQL_VS_POSTGRESQL.md  CERTIFICACAO_ALTO_RISCO.md  EXECUTIVE_SUMMARY_PQC_COMMERCIAL_2025-11-24.md  FALLBACKS.md  FIPS_READINESS_REPORT_2025-11-28.md  INDEX.md  INDEX_RIB4_QUICKSTART.md  INTEGRACAO_FINAL_REPORT.md  INTEGRACAO_STATUS.md  KAYOSCRYPTO_EBOOK.html  KAYOSCRYPTO_EBOOK_COMPLETE.md  KAYOSCRYPTO_FULL_PRESENTATION_2025-11-30.md  KAYOSQL_HONEST_ANALYSIS.md  KAYOSQL_REAL_STATUS.md  KAYOSQL_USAGE.md  KNOWN_LIMITATIONS.md  LINKEDIN_POST_TEMPLATE.md  MISSION_COMPLETE.md  PERFORMANCE_COMPARISON_2025.md  PQC_VALIDATION_REPORT_2025-11-24.md  QUICKSTART.md  SATOR_6D_GENESIS.md  SATOR_STREAM_PROBE.md  SESSION_COMPLETE.md  mpcn_event_legend.md
docs/analysis/: COMPARACAO_HONESTA_MERCADO.md  PQC_DILITHIUM_STS_FINDINGS.md  VERIFICACAO_PROPRIEDADE_INTELECTUAL.md
docs/architecture/: enterprise-3d-architecture.md
docs/business/: A16Z_MEETING_PLAYBOOK.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_A16Z.md  STATUS.md
docs/cc/: THREAT_MODEL_FISHBONE.md
docs/checkpoints/: PHASE_1_CRYPTOSATOR_VALIDATION.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_SATOR_CALIBRATION.md  PRACTRAND_32GB_COMPLETE.md  SNAPSHOT_EMULATOR_V6.0.md  TASK_10.0_NIST_STS_PIPELINE_START.md  TASK_10.1_NIST_STS_LOCAL_RUN.md  TASK_10.1_RECORD_GROVER_100_COMPLETE.md  TASK_10.2_NIST_STS_COMPARISON.md  TASK_10.3_PQC_BENCHMARK_PIPELINE.md  TASK_10.4_STATISTICAL_BATTERY_PROGRESS_2025-11-22.md  TASK_10.4_STATISTICAL_BATTERY_PROGRESS_2025-11-26.md  TASK_10.5_NIST_STS_1000_STREAMS_2025-11-26.md  TASK_10.6_NIST_STS_1000_STREAMS_COMPLETE.md  TASK_11.0_QUANTUM_RESISTANCE_MANAGER_PLAN.md  TASK_6.1_RESISTANCE_COMPLETE.md  TASK_7.0_RIB4_DOCUMENTATION_COMPLETE.md  TASK_8.0_QUANTUM_EVOLUTION_START.md  TASK_8.1_BENCHMARK_NIST_COMPLETE.md  TASK_8.1_TESTING_AND_BENCHMARKS_COMPLETE.md  TASK_8.2_OPTIMIZATION_COMPLETE.md  TASK_8.3_INTEGRATION_COMPLETE.md  TASK_8.4_BUG_FIXES_COMPLETE.md  TASK_8.5_ED25519_COMPLETE.md  TASK_8.6_SPINE_INTEGRATION_COMPLETE.md  TASK_8.7_QUANTUM_ASSURANCE_PIPELINE_COMPLETE.md  TASK_9.0_PARANOID_100K_TIMING_REPORT.md  TASK_9.1_GROVER_100_COMPLETE.md  TASK_BIGCRUSH_2025-11-19_COMPLETE.md  TASK_HARDWARE_EMULATOR_VERIFICATION_COMPLETE.md  TASK_MEMORY_LACK_2025-11-22.md  TESTU01_BATCH_2025-11-26.md
docs/common-criteria/: COMMON_CRITERIA_PROTECTION_PROFILE.md  EVALUATION_PLAN.md  PROGRESS_REPORT.md  README.md  SECURITY_TARGET_ST.md
docs/compliance/: CERTIFICATION_PREPARATION.md
docs/design/: ED25519_PALINDROME_ARCHITECTURE.md
docs/diagnostics/: DIAGNOSTICS_MPCN_GUARD_2025-11-23.md  EMULATOR_EXECUTIVE_REPORT_2025-11-27.json  EMULATOR_REPORT_2025-11-22.md  MPCN_STATE_ANALYSIS_2025-11-30.md  PRE_AUDIT_FIPS_ISO_EXPECTATIVA_2025-11-26.md  RESUMO_EXECUTIVO_CORRECOES_2025-11-30.md  REVERSIBILIDADE_CORRECAO_COMPLETA_2025-11-30.md  STRESS_HARNESS_README.md  TESTS_INVENTORY_20251127.md  (+1 more)
examples/: kayosql_integration_demo.py
src/: __init__.py
src/implementations/rust/: Cargo.toml
src/implementations/rust/benches/: benchmarks.rs
src/implementations/rust/src/: lib.rs
src/rust/kayoscrypto-core/: Cargo.toml
src/rust/kayoscrypto-core/examples/: dudect_timing.rs
src/rust/kayoscrypto-core/scripts/: final_hardened_build.sh  optimize_timing_tests.sh
src/rust/kayoscrypto-core/src/: lib.rs  metrics.rs  permutations.rs  strong_mix.rs  tables.rs
src/rust/kayoscrypto-core/src/analysis/: kayos_pattern_analyzer.rs  mod.rs
src/rust/kayoscrypto-core/src/behavior/: mod.rs
src/rust/kayoscrypto-core/src/constant_time/: mod.rs
src/rust/kayoscrypto-core/src/quantum/: avalanche_cascade.rs  block_uniformizer.rs  entropy_refiner.rs  galois_matrix_processor.rs  gap_metrics.rs  low_depth_shuffler.rs  matrix_rank_optimizer.rs  mod.rs  orchestrator.rs  quantum_entropy_boost.rs  quantum_xor_fold.rs  relojoeiro.rs  sator_auditor.rs  sator_block_whitener.rs  sator_bridge.rs  sator_curator.rs  spectral_analyzer.rs  surgical_refiner.rs  targeted_entropy_refiner.rs  velho_matuto.rs  vidente.rs
src/rust/kayoscrypto-core/tests/: permutation_validation.rs  timing_leakage.rs
src/rust/kayoscrypto-core/tests/security/: dudect_scenarios.rs  timing_leakage.rs
src/rust/kayoscrypto-server/: Cargo.toml
src/rust/kayoscrypto-server/src/: main.rs
tests/: fips_certification_tests.py  test_dna_auth_suite.py  test_verify_mpcn_ledger.py  teste_importacoes.py  teste_integracao_kayoscrypto_sanitizador.py
(+401 files in other folders)
