[package]
name = "kayoscrypto-safe"
version = "0.1.0"
edition = "2021"

[dependencies]
subtle = { version = "2.5", features = ["nightly"] }
sha3 = "0.10"
hex = "0.4"
arrayvec = "0.7"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
debug = true
