[package]
name = "kayoscrypto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kayoscrypto-safe = { path = "../kayoscrypto-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
